# usg-tacacs

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  COMPLIANCE_GUIDE.md  Cargo.toml  README.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_CONTROLS.md  SECURITY_RECOMMENDATIONS.md  config.example.json  sbom.spdx.json
.github-deprecated/: README.md  dependabot.yml
.github-deprecated/workflows/: docs.yml  nist-compliance.yml
.github/workflows/: ci.yml
container/: docker-compose.yml
container/haproxy/: haproxy.cfg
crates/tacacs-audit/: Cargo.toml
crates/tacacs-audit/src/: config.rs  elasticsearch.rs  event.rs  forwarder.rs  lib.rs  syslog.rs
crates/tacacs-client-tls/: Cargo.toml
crates/tacacs-client-tls/src/: acct.rs  authen.rs  author.rs  client.rs  lib.rs  tls.rs
crates/tacacs-openssh/: Cargo.toml
crates/tacacs-openssh/src/: config.rs  lib.rs
crates/tacacs-policy-ingest/: Cargo.toml
crates/tacacs-policy-ingest/schemas/: config.schema.json
crates/tacacs-policy-ingest/src/: api.rs  tls.rs
crates/tacacs-policy/src/: lib.rs
crates/tacacs-proto/: Cargo.toml
crates/tacacs-proto/benches/: proto_bench.rs
crates/tacacs-proto/fuzz/: Cargo.toml  README.md
crates/tacacs-proto/fuzz/fuzz_targets/: fuzz_body_crypto.rs  fuzz_header.rs  fuzz_packet.rs
crates/tacacs-proto/src/: accounting.rs  authen.rs  author.rs  crypto.rs  header.rs  lib.rs
crates/tacacs-secrets/: Cargo.toml
crates/tacacs-secrets/src/: config.rs  lib.rs  provider.rs
crates/tacacs-secrets/src/est/: mod.rs
crates/tacacs-secrets/src/openbao/: client.rs  mod.rs
crates/tacacs-server/: Cargo.toml
crates/tacacs-server/src/: ascii.rs  auth.rs  config.rs  main.rs  metrics.rs  policy.rs  server.rs  server.rs.bak  server.rs.bak10  server.rs.bak11  server.rs.bak2  server.rs.bak3  server.rs.bak4  server.rs.bak5  server.rs.bak6  server.rs.bak7  server.rs.bak8  server.rs.bak9  session.rs  session_registry.rs  telemetry.rs  tls.rs
crates/tacacs-server/src/api/: handlers.rs  mod.rs  models.rs  rbac.rs
crates/tacacs-server/tests/: est_integration.rs
docs/: DEPLOYMENT_SECURITY.md  HARDENING_GUIDE.md  NASA-POWER-OF-10-COMPLIANCE.md  NIAP-CERTIFICATION-ROADMAP.md  NIAP-NDCPP-MAPPING.md  NIST-CONTROLS-MAPPING.md  OPERATIONS_SECURITY.md  README.md  ROADMAP.md  SECURITY-TARGET.md  nist-control-analysis.json  nist-control-analysis.md  zensical-orig.toml  zensical.toml
docs/docs/: dev_setup.md  est-provisioning.md  index.md  tls.md
docs/docs/admin/: index.md  management-api.md  reverse-proxy-mtls.md
docs/docs/dev/: index.md
docs/templates/: nist-header-template.md
gitops-template/: .sops.yaml  README.md
gitops-template/.github-deprecated/: README.md
gitops-template/.github-deprecated/workflows/: validate.yml
gitops-template/argocd/: applicationset.yaml  project.yaml
gitops-template/base/: config.json  kustomization.yaml  policy.json  rbac.json
gitops-template/locations/example/: README.md  config.json  policy.json  secrets.yaml.example
gitops-template/scripts/: generate-location.py
iac/ansible/: README.md  requirements.yml
iac/ansible/inventory/production/: hosts.yml
iac/ansible/inventory/production/group_vars/: all.yml  etcd.yml  frr_anycast.yml  haproxy.yml  patroni.yml  pgbouncer.yml
iac/ansible/playbooks/: deploy-bgp-anycast.yml  deploy-haproxy.yml  deploy-postgresql-ha.yml  deploy.yml  rollback.yml  rotate-certs.yml  upgrade.yml
iac/ansible/roles/etcd/defaults/: main.yml
iac/ansible/roles/etcd/handlers/: main.yml
iac/ansible/roles/etcd/meta/: main.yml
iac/ansible/roles/etcd/tasks/: main.yml
iac/ansible/roles/etcd/templates/: etcd.conf.yml.j2  etcd.service.j2
iac/ansible/roles/frr_anycast/defaults/: main.yml
iac/ansible/roles/frr_anycast/handlers/: main.yml
iac/ansible/roles/frr_anycast/meta/: main.yml
iac/ansible/roles/frr_anycast/tasks/: main.yml
iac/ansible/roles/frr_anycast/templates/: anycast-vip.conf.j2  daemons.j2  frr.conf.j2  ifcfg-lo1.j2  tacacs-anycast-health.service.j2  tacacs-health-check.sh.j2
iac/ansible/roles/patroni/defaults/: main.yml
iac/ansible/roles/patroni/handlers/: main.yml
iac/ansible/roles/patroni/meta/: main.yml
iac/ansible/roles/patroni/tasks/: main.yml
iac/ansible/roles/patroni/templates/: patroni.service.j2  patroni.yml.j2
iac/ansible/roles/pgbouncer/defaults/: main.yml
iac/ansible/roles/pgbouncer/handlers/: main.yml
iac/ansible/roles/pgbouncer/meta/: main.yml
iac/ansible/roles/pgbouncer/tasks/: main.yml
iac/ansible/roles/pgbouncer/templates/: pgbouncer.ini.j2  pgbouncer.service.j2  userlist.txt.j2
iac/ansible/roles/tacacs_common/defaults/: main.yml
iac/ansible/roles/tacacs_common/meta/: main.yml
iac/ansible/roles/tacacs_common/tasks/: main.yml
iac/ansible/roles/tacacs_ha/defaults/: main.yml
iac/ansible/roles/tacacs_ha/handlers/: main.yml
iac/ansible/roles/tacacs_ha/meta/: main.yml
iac/ansible/roles/tacacs_ha/tasks/: main.yml
iac/ansible/roles/tacacs_ha/templates/: haproxy-override.conf.j2  haproxy.cfg.j2
iac/ansible/roles/tacacs_openbao/defaults/: main.yml
iac/ansible/roles/tacacs_openbao/handlers/: main.yml
iac/ansible/roles/tacacs_openbao/meta/: main.yml
iac/ansible/roles/tacacs_openbao/tasks/: approle.yml  configure.yml  main.yml  (+1 more)
iac/packer/: README.md  tacacs-server.pkr.hcl
iac/packer/files/: tacacs-server.service
iac/packer/scripts/: base-setup.sh  harden.sh  install-tacacs.sh
iac/terraform/: README.md
iac/terraform/environments/production/: main.tf  terraform.tfvars
iac/terraform/modules/tacacs-dns/: main.tf
iac/terraform/modules/tacacs-network/: main.tf
iac/terraform/modules/tacacs-vm/: main.tf  outputs.tf  variables.tf
scripts/: analyze-nist-controls.py  generate-nist-headers.py
scripts/ci/: validate-function-length.sh  validate-runtime-unwraps.sh
tests/e2e/: .dockerignore  Dockerfile.test-runner  Dockerfile.usg-tacacs  README.md  compose.yaml
tests/e2e/artifacts/: matrix.md  results.json
tests/e2e/config/tac_plus/: tac_plus.conf
tests/e2e/config/usg-tacacs/: policy.json  policy.schema.json
tests/e2e/scripts/: run_tests.py
(+15 files in other folders)
