[workspace]
resolver = "2"
members = [
  "crates/tacacs-proto",
  "crates/tacacs-policy",
  "crates/tacacs-secrets",
  "crates/tacacs-server",
  "crates/tacacs-policy-ingest",
  "crates/tacacs-client-tls",
  "crates/tacacs-openssh",
]
exclude = [
  "crates/tacacs-proto/fuzz",
]

[workspace.package]
version = "0.76.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Internal crates
usg-tacacs-proto = { path = "crates/tacacs-proto" }
usg-tacacs-policy = { path = "crates/tacacs-policy" }
usg-tacacs-secrets = { path = "crates/tacacs-secrets" }
usg-tacacs-client-tls = { path = "crates/tacacs-client-tls" }
usg-tacacs-openssh = { path = "crates/tacacs-openssh" }

# Async runtime
tokio = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.28"
log = "0.4"

# OpenTelemetry
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }

# TLS
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"

# Crypto
openssl = "0.10"
argon2 = "0.5"
sha2 = "0.10"

# Utilities
bytes = "1"
hex = "0.4"
regex = "1"
clap = { version = "4", features = ["derive", "env"] }

# JSON Schema
jsonschema = "0.28"

# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }
tower-http = { version = "0.6", features = ["trace"] }

# LDAP
ldap3 = { version = "0.12", default-features = false, features = ["tls-native", "sync"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "time", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }

# Archive handling
flate2 = "1"
tar = "0.4"
x509-parser = "0.18"

# HTTP client (for OpenBao)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
backoff = { version = "0.4", features = ["tokio"] }
async-trait = "0.1"
