[package]
name = "usg-tacacs-audit"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Audit log forwarding for TACACS+ server (syslog RFC 5424, Elasticsearch)"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging/tracing
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# TLS for syslog
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rustls-native-certs = "0.8"

# Hostname
hostname = "0.4"

# Elasticsearch client
elasticsearch = "8.15.0-alpha.1"

[dev-dependencies]
tempfile = "3"
