[package]
name = "tacacs-policy-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
axum-server.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time"] }
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "time"] }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true

rustls.workspace = true
rustls-pki-types.workspace = true

flate2.workspace = true
tar.workspace = true
sha2.workspace = true
hex.workspace = true
bytes.workspace = true
x509-parser.workspace = true

jsonschema.workspace = true

sqlx.workspace = true
uuid.workspace = true
time.workspace = true
