[package]
name = "usg-tacacs-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Secrets management for TACACS+ server with OpenBao integration"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP client for OpenBao
reqwest.workspace = true

# Retry logic
backon.workspace = true

# Logging
tracing.workspace = true

# TLS
rustls.workspace = true
rustls-pki-types.workspace = true

# Async trait
async-trait.workspace = true

# EST client for zero-touch certificate provisioning
usg-est-client.workspace = true

# EST dependencies
hex.workspace = true
pem-rfc7468 = "0.7"
x509-cert = { version = "0.2", features = ["pem"] }

# Time handling
time.workspace = true

# Zeroization of sensitive data
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"
