[package]
name = "usg-tacacs-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "time",
    "json",
    "env-filter",
] }
clap.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
x509-cert = { version = "0.2", features = ["pem"] }
usg-tacacs-policy.workspace = true
usg-tacacs-proto.workspace = true
usg-tacacs-secrets.workspace = true
openssl.workspace = true
hex.workspace = true
ldap3.workspace = true
argon2.workspace = true
subtle = "2.6"
serde.workspace = true
serde_json.workspace = true

# HTTP server for metrics and health endpoints
axum.workspace = true
hyper = { version = "1.4", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tower = "0.5"

# Prometheus metrics
prometheus = "0.14"

# OpenTelemetry tracing
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true

[dev-dependencies]
tempfile = "3.14"
rcgen = "0.13"
